# ragtime-reviewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
server/: README.md  ReviewerRAGthesis.ipynb  export_rag_review.py  main.py  pyproject.toml  rag_sme_validation_sheet.csv  rag_sme_validation_sheet_50.csv  requirements.txt  thesis.py
server/routers/: ai.py  auth.py  db.py  root.py
server/utils/: db.py  engine.py  hashing.py  schema.py  token.py
src/: App.tsx  index.css
src/components/: NavLink.tsx  QuizImageViewer.tsx
src/components/ui/: chart.tsx  form.tsx  progress.tsx  resizable.tsx
src/contexts/: AuthContext.tsx
src/helper/: validate.ts
src/lib/: auth.ts
src/pages/: KnowledgeBase.tsx  LandingPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  QuizPage.tsx  SelectionPage.tsx  SmeValidationPrintPage.tsx
src/types/: authentication.ts  knowledge_score.ts  question.ts
src/utils/: verify.ts
tests/validate/: email.test.ts  password.test.ts  username.test.ts
